# mcp-decorator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
src/slack_mcp_wrapper/: __init__.py  config.py  overrides.py  server.py  upstream.py
src/slack_mcp_wrapper/tools/: __init__.py  health_report.py  thread_digest.py
tests/: test_health_metrics.py  test_wrapper_e2e.py
